--- a/MathFunctions/CMakeLists.txt
+++ b/MathFunctions/CMakeLists.txt
@@ -1,1 +1,10 @@
-add_library(MathFunctions MathFunctions.cc mysqrt.cc)
+add_library(MathFunctions MathFunctions.cc)
+
+# -DUSE_MYMATH
+option(USE_MYMATH "Use tutorial provided math implementation" ON)
+
+if (USE_MYMATH)
+  target_compile_definitions(MathFunctions PRIVATE "USE_MYMATH")
+  add_library(SqrtLibrary STATIC mysqrt.cc)
+  target_link_libraries(MathFunctions PRIVATE SqrtLibrary)
+endif()
